--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 version: "2"
 services:
   teradata:
-    build:
-      context: .
+    image: bayesimpact/teradata-connector
     volumes:
       - ./Makefile:/home/nbuser/work/Makefile:ro
       - ./teradata_test_connect.py:/home/nbuser/work/teradata_test_connect.py:ro
